@@ -1,4 +1,4 @@
-name    = Dist-Zilla-Plugin-CriticTests
+name    = Dist-Zilla-Plugin-Test-Perl-Critic
 author  = Jerome Quelin
 license = Perl_5
 copyright_holder = Jerome Quelin
@@ -6,15 +6,16 @@ copyright_year   = 2009
 
 ; -- static meta-information
 [MetaResources]
-homepage   = http://search.cpan.org/dist/Dist-Zilla-Plugin-CriticTests
+homepage   = http://search.cpan.org/dist/Dist-Zilla-Plugin-Test-Perl-Critic
 repository = http://github.com/jquelin/dist-zilla-plugin-critictests
 ;MailingList = none
 
 ;This stuff is handy if things go seriously wrong.
 ;[@Filter]
 ;-bundle = @JQUELIN
-;-remove = CriticTests
+;-remove = Test::Perl::Critic
 ;[CriticTests]
+;[Test::Perl::Critic]
 
 [Bootstrap::lib]
 [@JQUELIN]
