@@ -7,7 +7,7 @@ copyright_year   = 2009
 
 
 ; use the following to add a new critic.t test
-[CriticTests]
+[Test::Perl::Critic]
 ; if you want to use a perlcritic config file
 ; specity its path like this (relative to
 ; project root...)
