@@ -1,6 +1,8 @@
-Revision history for Dist::Zilla::Plugin::CriticTests
+Revision history for Dist::Zilla::Plugin::Test::Perl::Critic
 
 {{$NEXT}}
+ - Renamed distribution to .*-Test-Perl-Critic, previous name
+   marked as deprecated, but still works. ( Kent Fredric )
 
 1.111450  2011-05-25 09:42:23 Europe/Paris
  - fix rt#68451 - undef critic_config should be treated as '' (mike doherty)
